--- a/apply_recipe/release.json
+++ b/apply_recipe/release.json
@@ -3,8 +3,8 @@
         "op": "core/text-transform",
         "description": "Text transform on cells in column Mname using expression value.toTitlecase()",
         "engineConfig": {
-            "facets": [],
-            "mode": "row-based"
+            "mode": "row-based",
+            "facets": []
         },
         "columnName": "Mname",
         "expression": "value.toTitlecase()",
@@ -14,26 +14,26 @@
     },
     {
         "op": "core/text-transform",
-        "description": "Text transform on cells in column Director using expression value.toUppercase()",
+        "description": "Text transform on cells in column Director using expression value.toTitlecase()",
         "engineConfig": {
-            "facets": [],
-            "mode": "row-based"
+            "mode": "row-based",
+            "facets": []
         },
         "columnName": "Director",
-        "expression": "value.toUppercase()",
+        "expression": "value.toTitlecase()",
         "onError": "keep-original",
         "repeat": false,
         "repeatCount": 10
     },
     {
         "op": "core/text-transform",
-        "description": "Text transform on cells in column Cname using expression value.toUppercase()",
+        "description": "Text transform on cells in column Cname using expression value.toTitlecase()",
         "engineConfig": {
-            "facets": [],
-            "mode": "row-based"
+            "mode": "row-based",
+            "facets": []
         },
         "columnName": "Cname",
-        "expression": "value.toUppercase()",
+        "expression": "value.toTitlecase()",
         "onError": "keep-original",
         "repeat": false,
         "repeatCount": 10
